Fixed Expert Facets overflow issue

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -9,7 +9,7 @@ nav.navbar-oih.navbar.navbar-expand-lg.navbar-light {
 }
 
 .primary-bg {
-    background-color: #21295c;
+  background-color: #21295c;
 }
 
 .text-light-blue-alt {
@@ -69,6 +69,7 @@ a.text-light.menu-text.nav-link {
 .result-item {
   border-bottom: 1.2px solid #95a5a6;
 }
+
 .result-title {
   text-decoration: none;
   color: #21295c;
@@ -79,27 +80,33 @@ a.text-light.menu-text.nav-link {
 }
 
 p.result-p {
-    text-align: left;
+  text-align: left;
   margin-bottom: 0.5em;
+  word-wrap: break-word;
 }
 
 p.result-p.truncate {
-    width: 50%;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
+  width: 50%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.wrap-text {
+  width: 80vw;
+  flex-wrap: wrap;
 }
 
 .description-truncate {
- display: -webkit-box;
-    max-width: 100%;
-    -webkit-line-clamp: 4;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
+  display: -webkit-box;
+  max-width: 100%;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 
 .pagination {
-    text-transform: capitalize;
+  text-transform: capitalize;
 }
 
 .bubble {
